k8s/finimpact.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finimpact
  labels:
    app: finimpact
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finimpact
  template:
    metadata:
      labels:
        app: finimpact
    spec:
      containers:
      - name: finimpact
        image: aws-develope-finimpact:local
        ports:
        - containerPort: 8082
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: finimpact
  labels:
    app: finimpact
spec:
  selector:
    app: finimpact
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
  type: ClusterIP
